# napari-seedseg

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_seedseg/: __init__.py  _layers.py  _method.py  _widget.py  napari.yaml
src/napari_seedseg/_test/: test_widget.py
src/napari_seedseg/_tests/: test_widget.py
