[metadata]
name = napari-seedseg
version = attr: napari_seedseg.__version__
description = A simple plugin for segmentation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rezaakb/napari-seedseg
author = Reza Akbarian Bafghi
author_email = reza.akbarianbafghi@colorado.edu
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/rezaakb/napari-seedseg/issues
    Documentation = https://github.com/rezaakb/napari-seedseg#README.md
    Source Code = https://github.com/rezaakb/napari-seedseg
    User Support = https://github.com/rezaakb/napari-seedseg/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    opencv-python-headless
    scikit-image>=0.19.3

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-seedseg = napari_seedseg:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
